<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/frienddes_complaint"
        android:icon="@drawable/ic_complaint"
        android:orderInCategory="100"
        android:title="@string/friend_des_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/frienddes_blacklist"
        android:icon="@drawable/ic_blacklist"
        android:orderInCategory="100"
        android:title="@string/friend_des_blacklist"
        app:showAsAction="never" />
    <item
        android:id="@+id/frienddes_dele"
        android:icon="@drawable/ic_dele"
        android:orderInCategory="100"
        android:title="@string/friend_des_dele"
        app:showAsAction="never" />

</menu>
