<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chat_remove"
        android:icon="@drawable/ic_remove"
        android:orderInCategory="100"
        android:title="@string/activity_chat_remove"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_chat_clear"
        android:icon="@drawable/ic_clear"
        android:orderInCategory="100"
        android:title="@string/activity_chat_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_chat_details"
        android:icon="@drawable/ic_details"
        android:orderInCategory="100"
        android:title="@string/activity_chat_details"
        app:showAsAction="never" />
</menu>
