<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/big_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.w8.RegisterAccPhoneActivity"
    tools:showIn="@layout/activity_register_acc_phone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_register">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_one_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:inputType="phone"
                android:maxLength="16"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/reg_username_idea"
            android:textSize="12sp"
            android:textStyle="bold" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usertext_register">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_one_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/account"
                android:inputType="text"
                android:maxLength="16"
                android:maxLines="1"
                android:text="@string/yes988a" />
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/reg_progressBar"
            style="?android:attr/progressBarStyleSmallInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/reg_one_submit"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="registerOne"
            android:text="@string/next"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reg_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/chat_margin"
            android:padding="@dimen/big_margin"
            android:text="@string/reg_login" />

    </LinearLayout>

</ScrollView>